--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 .home{
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../img/home-bg.jpg');
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../img/home-bg.jpeg');
     background-size: cover;
     background-position: center;
     display: flex;
